# rl4robot

./: .gitignore  README.md  setup.cfg
examples/: ppo_agent.py
rl4robot/: types.py
rl4robot/agents/: __init__.py  agent.py
rl4robot/agents/ppo/: __init__.py  actor_critic.py
rl4robot/common/: evaluating_loop.py  training_loop.py
rl4robot/envs/: __init__.py  env_wrapper.py
tests/unit/: test_gae.py
