[metadata]
name = rl4robot
version = 0.1.0

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    gym
    mujoco-py
    numpy
    opencv-python
    tensorboard
    torch
    tqdm

[options.extras_require]
dev =
    black
    flake8
    isort
    pytest

[flake8]
exclude = venv
select = E9,F63,F7,F82

[isort]
profile = black

[tool:pytest]
testpaths =
    tests
